Added portfolio.html & contact.html files, and linked to them from the index.html file

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
           <div class="d-flex navpadding">
             <li class="navlist">
-              <a class="mynavlink" href="#">About Me</a>
+              <a class="mynavlink" href="#index.html">About Me</a>
             </li>
             <li class="navlist">
-              <a class="mynavlink" href="#">Portfolio</a>
+              <a class="mynavlink" href="portfolio.html">Portfolio</a>
             </li>
             <li class="navlist">
-              <a class="mynavlink" href="#">Contact</a>
+              <a class="mynavlink" href="contact.html">Contact</a>
             </li>
           </div>
         
