updated links with repository file path to other html files

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
               <a class="mynavlink" href="#index.html">About Me</a>
             </li>
             <li class="navlist">
-              <a class="mynavlink" href="/portfolio.html">Portfolio</a>
+              <a class="mynavlink" href="Bootstrap-Playground/portfolio.html">Portfolio</a>
             </li>
             <li class="navlist">
-              <a class="mynavlink" href="/contact.html">Contact</a>
+              <a class="mynavlink" href="Bootstrap-Playground/contact.html">Contact</a>
             </li>
           </div>
         
