updated html & css

--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     
+    <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css"/>
 
     <title>Bootstrap Practice</title>
   </head>
+
   <body class="bg-light">
 
     <!--Start of NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light mycolor">
-        <a class="mynavbrand col-8 col-6-md headerpadding" href="#"><h1>Stephanie Sevadjian</h1></a>
-
-          <div class="d-flex navpadding">
+        <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
+          <div class="d-flex">
             <li class="navlist">
               <a class="mynavlink" href="#index.html">About Me</a>
             </li>
@@ -29,12 +33,11 @@
               <a class="mynavlink" href="Bootstrap-Playground/contact.html">Contact</a>
             </li>
           </div>
-        
-      </nav>
-      <!--End of NAVBAR-->
+    </nav>
+    <!--End of NAVBAR-->
 
     <!--Start of TABLE-->
-      <table class="table headerpadding">
+      <table class="table">
         <thead>
           <tr>
             <th scope="col"><h2>About Me</h2></th>
@@ -44,12 +47,14 @@
     <!--End of TABLE-->
 
     <!--Start of CONTAINER-->
-      <div class="container"></div>
+      <div class="container rounded">
       <div class="mypicture col-6">
-        <img class="img-fluid rounded-circle float-left" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/90261217_10158014546514030_4166488760998952960_o.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=PEDc1_fMRRsAX_MBnXn&_nc_ht=scontent-sjc3-1.xx&oh=f7fe33ef3a750e745cd41217abb5be41&oe=5F362233" alt="my picture"/>
+        <img class="img-fluid rounded-circle justify-content-start" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/90261217_10158014546514030_4166488760998952960_o.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=PEDc1_fMRRsAX_MBnXn&_nc_ht=scontent-sjc3-1.xx&oh=f7fe33ef3a750e745cd41217abb5be41&oe=5F362233" alt="my picture"/>
       </div>
-      <section class="col-6">
+      <section class="col-6 justify-content-center">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint similique vel sunt pariatur eius. Totam nisi dolore eligendi officiis quam tempore quisquam consequatur, facilis expedita libero, nostrum unde, saepe maxime!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est dolorum impedit quae error ab quibusdam sed cumque. Alias quis recusandae dolorum voluptas enim repellat distinctio ipsum, possimus officia assumenda quo quisquam impedit temporibus voluptatum itaque obcaecati praesentium earum delectus veritatis eaque placeat tempore. Beatae vel eveniet similique hic amet libero a mollitia? Perferendis odio ullam asperiores modi in. Adipisci, excepturi optio. Soluta numquam, quaerat ullam illo assumenda quis beatae! Eligendi odit numquam eum consequatur dolores. Corporis, qui veritatis provident iure quod sed. Culpa molestiae, eaque nemo atque suscipit fugiat modi quaerat repudiandae iusto excepturi quam delectus illo itaque nisi veritatis eveniet. Repellat quae, esse inventore nam pariatur possimus tempora odio sunt delectus placeat iste libero sequi, nulla rerum at modi.
+        </p>
       </section>
     </div>
     <!--End of CONTAINER-->
