edited nav links again

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
           <div class="d-flex">
             <li class="navlist">
-              <a class="mynavlink" href="index.html">About Me</a>
+              <a class="mynavlink" href="./index.html">About Me</a>
             </li>
             <li class="navlist">
-              <a class="mynavlink" href="portfolio.html">Portfolio</a>
+              <a class="mynavlink" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="navlist">
-              <a class="mynavlink" href="contact.html">Contact</a>
+              <a class="mynavlink" href="./contact.html">Contact</a>
             </li>
           </div>
     </nav>
