--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css"/>
 
-    <title>Bootstrap Practice</title>
+    <title>Bootstrap-HW</title>
   </head>
 
   <body class="bg-light">
@@ -47,13 +47,13 @@
     <!--End of TABLE-->
 
     <!--Start of CONTAINER-->
-      <div class="container rounded">
+    <div class="container rounded">
       <div class="mypicture col-6">
         <img class="img-fluid rounded-circle justify-content-start" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/90261217_10158014546514030_4166488760998952960_o.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=PEDc1_fMRRsAX_MBnXn&_nc_ht=scontent-sjc3-1.xx&oh=f7fe33ef3a750e745cd41217abb5be41&oe=5F362233" alt="my picture"/>
       </div>
       <section class="col-6 justify-content-center">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint similique vel sunt pariatur eius. Totam nisi dolore eligendi officiis quam tempore quisquam consequatur, facilis expedita libero, nostrum unde, saepe maxime!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est dolorum impedit quae error ab quibusdam sed cumque. Alias quis recusandae dolorum voluptas enim repellat distinctio ipsum, possimus officia assumenda quo quisquam impedit temporibus voluptatum itaque obcaecati praesentium earum delectus veritatis eaque placeat tempore. Beatae vel eveniet similique hic amet libero a mollitia? Perferendis odio ullam asperiores modi in. Adipisci, excepturi optio. Soluta numquam, quaerat ullam illo assumenda quis beatae! Eligendi odit numquam eum consequatur dolores. Corporis, qui veritatis provident iure quod sed. Culpa molestiae, eaque nemo atque suscipit fugiat modi quaerat repudiandae iusto excepturi quam delectus illo itaque nisi veritatis eveniet. Repellat quae, esse inventore nam pariatur possimus tempora odio sunt delectus placeat iste libero sequi, nulla rerum at modi.
+        <p>I am an up and coming software developer with a creative side, aimed at creating applications capable of solving some of life's little problems.</p>
+        <p>I love brainstorming new and creative uses for computer and mobile applications. And, ultimately? I'd like to be my own boss one day.
         </p>
       </section>
     </div>
