--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,47 @@
-Portfolio
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="style.css"/>
+
+    <title>Porfolio</title>
+  </head>
+
+  <body class="bg-light">
+
+    <!--Start of NAVBAR-->
+    <nav class="navbar navbar-expand-lg navbar-light mycolor">
+        <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
+          <div class="d-flex">
+            <li class="navlist">
+              <a class="mynavlink" href="./index.html">About Me</a>
+            </li>
+            <li class="navlist">
+              <a class="mynavlink" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="navlist">
+              <a class="mynavlink" href="./contact.html">Contact</a>
+            </li>
+          </div>
+    </nav>
+    <!--End of NAVBAR-->
+
+    <!--Start of TABLE-->
+      <table class="table">
+        <thead class="table">
+          <tr>
+            <th scope="col"><h2>Porfolio</h2></th>
+          </tr>
+        </thead>
+      </table>
+    <!--End of TABLE-->
