updated misspelled word

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css"/>
 
-    <title>Porfolio</title>
+    <title>Portfolio</title>
   </head>
 
   <body class="bg-light">
@@ -40,7 +40,7 @@
       <table class="table">
         <thead class="table">
           <tr>
-            <th scope="col"><h2>Porfolio</h2></th>
+            <th scope="col"><h2>Portfolio</h2></th>
           </tr>
         </thead>
       </table>
