updated index with containers, adjusted css, and updated contact file

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </head>
 
   <body class="bg-light">
-
+  <div class="container">  
     <!--Start of NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-light mycolor">
-        <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
-          <div class="d-flex">
+    <nav class="navbar navbar-expand-lg navbar-light mycolor col-12">
+        <a class="mynavbrand col-7 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
+          <div class="d-flex col-4 justify-content-end">
             <li class="navlist">
               <a class="mynavlink" href="./index.html">About Me</a>
             </li>
@@ -36,8 +36,9 @@
     </nav>
     <!--End of NAVBAR-->
 
+ 
     <!--Start of TABLE-->
-      <table class="table">
+      <table class="table col-12">
         <thead class="table">
           <tr>
             <th scope="col"><h2>About Me</h2></th>
@@ -46,16 +47,18 @@
       </table>
     <!--End of TABLE-->
 
+
     <!--Start of CONTAINER-->
-    <div class="container rounded">
-      <div class="mypicture col-6">
-        <img class="img-fluid rounded-circle justify-content-start" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/90261217_10158014546514030_4166488760998952960_o.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=PEDc1_fMRRsAX_MBnXn&_nc_ht=scontent-sjc3-1.xx&oh=f7fe33ef3a750e745cd41217abb5be41&oe=5F362233" alt="my picture"/>
-      </div>
-      <section class="col-6 justify-content-center">
-        <p>I am an up and coming software developer with a creative side, aimed at creating applications capable of solving some of life's little problems.</p>
-        <p>I love brainstorming new and creative uses for computer and mobile applications. And, ultimately? I'd like to be my own boss one day.
-        </p>
-      </section>
+    <div class="contentbackground row rounded no-gutters">
+          <div class="mypicture col-5 mx-auto">
+            <img class="img-thumbnail rounded-circle justify-content-start" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/90261217_10158014546514030_4166488760998952960_o.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=PEDc1_fMRRsAX_MBnXn&_nc_ht=scontent-sjc3-1.xx&oh=f7fe33ef3a750e745cd41217abb5be41&oe=5F362233" alt="my picture"/>
+          </div>
+          <section class="col-6 justify-content-center mx-auto">
+            <p>I am an up and coming software developer with a creative side, aimed at creating applications capable of solving some of life's little problems.</p>
+            <p>I love brainstorming new and creative uses for computer and mobile applications. And, ultimately? I'd like to be my own boss one day.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse similique minus illum perferendis. Eaque reiciendis harum rerum nostrum ad inventore officia tenetur quasi. Provident dolorem quos veritatis rem ex quam quasi blanditiis possimus! Quisquam accusantium, ipsam assumenda aliquid autem odio culpa tempore consequuntur est ipsa, recusandae tenetur vel sed numquam? Similique perferendis totam explicabo odit rem reiciendis, modi architecto consectetur reprehenderit debitis iusto veniam ratione et aperiam eligendi delectus dolore distinctio natus repudiandae ducimus praesentium. Ipsam, animi consectetur. Laboriosam laudantium laborum hic optio quos possimus deleniti maxime expedita. Soluta autem sequi nostrum numquam? Animi eos quis maxime possimus esse!</p>
+          </section>
     </div>
     <!--End of CONTAINER-->
   
@@ -64,5 +67,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </div>
   </body>
 </html>
