--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,56 @@
-Contact
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="style.css"/>
+
+    <title>Bootstrap-HW</title>
+  </head>
+
+  <body class="bg-light">
+
+    <!--Start of NAVBAR-->
+    <nav class="navbar navbar-expand-lg navbar-light mycolor col-12">
+        <a class="mynavbrand col-7 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
+          <div class="d-flex col-5">
+            <li class="navlist">
+              <a class="mynavlink" href="./index.html">About Me</a>
+            </li>
+            <li class="navlist">
+              <a class="mynavlink" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="navlist">
+              <a class="mynavlink" href="./contact.html">Contact</a>
+            </li>
+          </div>
+    </nav>
+    <!--End of NAVBAR-->
+
+        <!--Start of TABLE-->
+        <table class="table">
+            <thead class="table">
+              <tr>
+                <th scope="col"><h2>Contact</h2></th>
+              </tr>
+            </thead>
+          </table>
+        <!--End of TABLE-->
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  
+  </body>
+</html>
