--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <body class="bg-light">
   <div class="container">  
     <!--Start of NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-light mycolor col-12">
-        <a class="mynavbrand col-7 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
-          <div class="d-flex col-4 justify-content-end">
+    <nav class="navbar navbar-expand-lg navbar-light mycolor">
+        <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
+          <div class="d-flex">
             <li class="navlist">
               <a class="mynavlink" href="./index.html">About Me</a>
             </li>
