--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
   </head>
 
   <body class="bg-light">
-
+  <div class="container"> 
     <!--Start of NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-light mycolor col-12">
-        <a class="mynavbrand col-7 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
-          <div class="d-flex col-5">
+    <nav class="navbar navbar-expand-lg navbar-light mycolor">
+        <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
+          <div class="d-flex">
             <li class="navlist">
               <a class="mynavlink" href="./index.html">About Me</a>
             </li>
@@ -36,21 +36,29 @@
     </nav>
     <!--End of NAVBAR-->
 
-        <!--Start of TABLE-->
-        <table class="table">
-            <thead class="table">
-              <tr>
-                <th scope="col"><h2>Contact</h2></th>
-              </tr>
-            </thead>
-          </table>
-        <!--End of TABLE-->
+    <!--Start of TABLE-->
+      <table class="table">
+        <thead class="table">
+          <tr>
+            <th scope="col"><h2>Contact</h2></th>
+          </tr>
+        </thead>
+      </table>
+    <!--End of TABLE-->
+    
+    <!--Start of CONTAINER-->
+      <div class="contentbackground row rounded no-gutters">
+        <section class="col-6 justify-content-center mx-auto">
+            
+        </section>
+      </div>
+    <!--End of CONTAINER-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  
+  </div>
   </body>
 </html>
