updated portfolio and contact

--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,13 @@
     
     <!--Start of CONTAINER-->
       <div class="contentbackground row rounded no-gutters">
-        <section class="col-6 justify-content-center mx-auto">
-            
-        </section>
+        <div class="card border-light mb-3" style="max-width: 18rem;">
+          <div class="card-header">Header</div>
+          <div class="card-body">
+            <h5 class="card-title">Light card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
       </div>
     <!--End of CONTAINER-->
 
