--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     <div class="row row-cols-1 row-cols-md-2">
       <div class="col mb-4">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="./images/Screenshot.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
