Updated navbar; updated portfolio to include pictures; updated contact file with form and submit button

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,17 +23,17 @@
     <!--Start of NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light mycolor">
         <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
-          <div class="d-flex">
-            <li class="navlist">
-              <a class="mynavlink" href="./index.html">About Me</a>
-            </li>
-            <li class="navlist">
-              <a class="mynavlink" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="navlist">
-              <a class="mynavlink" href="./contact.html">Contact</a>
-            </li>
-          </div>
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="mynavlink" href="./index.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="mynavlink" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="mynavlink" href="./contact.html">Contact</a>
+          </li>
+        </ul>
     </nav>
     <!--End of NAVBAR-->
 
@@ -48,12 +48,12 @@
     <!--End of TABLE-->
 
     <!--Start of CONTAINER-->
-    <div class="contentbackground row rounded no-gutters">
+    <div class="container contentbackground row rounded no-gutters">
         <!-- Begin Image Cards -->
     <div class="row row-cols-1 row-cols-md-2">
       <div class="col mb-4">
         <div class="card">
-          <img src="./images/Screenshot.png" class="card-img-top" alt="...">
+          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/74602839_10157584019829030_7924429692952641536_o.jpg?_nc_cat=109&_nc_sid=da31f3&_nc_ohc=fAbiGrWE11oAX-s_FQd&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=1e205351d7d935561b68c3d758404a98&oe=5F3E8FB9" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -62,7 +62,7 @@
       </div>
       <div class="col mb-4">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/73417787_10157567784444030_793605000184987648_o.jpg?_nc_cat=108&_nc_sid=da31f3&_nc_ohc=mVc8MK1tr8sAX8jfmUY&_nc_oc=AQn-RRQbGqZU-PkXo7ONsCxr8o_vke-F23yS61JexSgQFP7LYghtnVfuSvp8ruXPs0kPOrx3nc2x-k7wCFZQW8Wa&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=3a84132f271c1df5b46f3dacc6db3350&oe=5F3DF4BC" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -71,7 +71,7 @@
       </div>
       <div class="col mb-4">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/c69.0.414.414a/p552x414/61915819_10157177208799030_9214069764756865024_n.jpg?_nc_cat=103&_nc_sid=da31f3&_nc_ohc=B7K2W1QeAKYAX9021ws&_nc_ht=scontent-sjc3-1.xx&oh=cc8d3c784df8c54bcefe9955dbbf0857&oe=5F3F0F56" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -80,7 +80,7 @@
       </div>
       <div class="col mb-4">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/58852800_10157095919209030_7654882158250557440_o.jpg?_nc_cat=100&_nc_sid=da31f3&_nc_ohc=bTtNySPpEB0AX87isxU&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=ea638dd6d3b9ff6722ecc93d91d3b1b6&oe=5F4005D8" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
