--- a/contact.html
+++ b/contact.html
@@ -22,17 +22,17 @@
     <!--Start of NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light mycolor">
         <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
-          <div class="d-flex">
-            <li class="navlist">
-              <a class="mynavlink" href="./index.html">About Me</a>
-            </li>
-            <li class="navlist">
-              <a class="mynavlink" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="navlist">
-              <a class="mynavlink" href="./contact.html">Contact</a>
-            </li>
-          </div>
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="mynavlink" href="./index.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="mynavlink" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="mynavlink" href="./contact.html">Contact</a>
+          </li>
+        </ul>
     </nav>
     <!--End of NAVBAR-->
 
@@ -47,14 +47,29 @@
     <!--End of TABLE-->
     
     <!--Start of CONTAINER-->
-      <div class="contentbackground row rounded no-gutters">
-        <div class="card border-light mb-3" style="max-width: 18rem;">
-          <div class="card-header">Header</div>
-          <div class="card-body">
-            <h5 class="card-title">Light card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <div class="container contentbackground row rounded no-gutters">
+        <!--Start of Form-->
+        <form class="col-sm-10">
+            <div class="form-group">
+              <label for="exampleFormControlInput1">First Name</label>
+              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="First Name">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Last Name</label>
+              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Last Name">
+            </div>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div>
-        </div>
+        
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary mb-2">Submit</button>
+        </form>
+        <!--End of Form-->
       </div>
     <!--End of CONTAINER-->
 
