--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <!--Start of NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light mycolor">
         <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
-          <div class="d-flex">
-            <li class="navlist">
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item">
               <a class="mynavlink" href="./index.html">About Me</a>
             </li>
-            <li class="navlist">
+            <li class="nav-item">
               <a class="mynavlink" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="navlist">
+            <li class="nav-item">
               <a class="mynavlink" href="./contact.html">Contact</a>
             </li>
-          </div>
+          </ul>
     </nav>
     <!--End of NAVBAR-->
 
@@ -49,11 +49,12 @@
 
 
     <!--Start of CONTAINER-->
-    <div class="contentbackground row rounded no-gutters">
+    <div class="container contentbackground row rounded no-gutters">
           <div class="mypicture col-5 mx-auto">
             <img class="img-thumbnail rounded-circle justify-content-start" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/90261217_10158014546514030_4166488760998952960_o.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=PEDc1_fMRRsAX_MBnXn&_nc_ht=scontent-sjc3-1.xx&oh=f7fe33ef3a750e745cd41217abb5be41&oe=5F362233" alt="my picture"/>
           </div>
           <section class="col-6 justify-content-center mx-auto">
+            <br>
             <p>I am an up and coming software developer with a creative side, aimed at creating applications capable of solving some of life's little problems.</p>
             <p>I love brainstorming new and creative uses for computer and mobile applications. And, ultimately? I'd like to be my own boss one day.
             </p>
