updated images and added .gitignore file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">  
     <!--Start of NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light mycolor">
-        <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
+        <nav class="mynavbrand col-8 col-6-md"><h1>Stephanie Sevadjian</h1></nav>
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item">
               <a class="mynavlink" href="./index.html">About Me</a>
@@ -31,7 +31,7 @@
             </li>
             <li class="nav-item">
               <a class="mynavlink" href="./contact.html">Contact</a>
-            </li>
+            </nav>
           </ul>
     </nav>
     <!--End of NAVBAR-->
@@ -55,10 +55,10 @@
           </div>
           <section class="col-6 justify-content-center mx-auto">
             <br>
-            <p>I am an up and coming software developer with a creative side, aimed at creating applications capable of solving some of life's little problems.</p>
-            <p>I love brainstorming new and creative uses for computer and mobile applications. And, ultimately? I'd like to be my own boss one day.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta dolore consectetur, beatae placeat ea laboriosam ratione esse tempora soluta dolor quasi reiciendis nisi id ipsa. Et, repellat, possimus voluptas sed eaque optio veniam, ex velit placeat tempora ipsam impedit? Labore aut dolorem quis, dolores excepturi repellat numquam fuga?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero delectus, quasi dolorum laudantium aliquam debitis quidem eaque similique culpa magni ab magnam ipsam maiores, voluptatum esse sed quis alias modi! Atque veritatis laudantium sit hic autem quis, veniam sapiente temporibus incidunt, unde aliquam aperiam. Ducimus odit repellat tempore est voluptate?.
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse similique minus illum perferendis. Eaque reiciendis harum rerum nostrum ad inventore officia tenetur quasi. Provident dolorem quos veritatis rem ex quam quasi blanditiis possimus! Quisquam accusantium, ipsam assumenda aliquid autem odio culpa tempore consequuntur est ipsa, recusandae tenetur vel sed numquam? Similique perferendis totam explicabo odit rem reiciendis, modi architecto consectetur reprehenderit debitis iusto veniam ratione et aperiam eligendi delectus dolore distinctio natus repudiandae ducimus praesentium. Ipsam, animi consectetur. Laboriosam laudantium laborum hic optio quos possimus deleniti maxime expedita. Soluta autem sequi nostrum numquam? Animi eos quis maxime possimus esse!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse similique minus illum perferendis. Eaque reiciendis harum rerum nostrum ad inventore officia tenetur quasi. Provident dolorem quos veritatis rem ex quam quasi blanditiis possimus! Quisquam accusantium, ipsam assumenda aliquid autem odio culpa tempore consequuntur est ipsa, recusandae tenetur vel sed numquam? Similique perferendis totam explicabo odit rem reiciendis, modi architecto consectetur reprehenderit debitis iusto veniam ratione et aperiam eligendi delectus dolore distinctio natus repudiandae ducimus praesentium. Ipsam, animi consectetur.</p>
           </section>
     </div>
     <!--End of CONTAINER-->
