--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
     <!--Start of NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light mycolor">
-        <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
+        <nav class="mynavbrand col-8 col-6-md"><h1>Stephanie Sevadjian</h1></nav>
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
           <li class="nav-item">
             <a class="mynavlink" href="./index.html">About Me</a>
@@ -53,28 +53,19 @@
     <div class="row row-cols-1 row-cols-md-2">
       <div class="col mb-4">
         <div class="card">
-          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/74602839_10157584019829030_7924429692952641536_o.jpg?_nc_cat=109&_nc_sid=da31f3&_nc_ohc=fAbiGrWE11oAX-s_FQd&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=1e205351d7d935561b68c3d758404a98&oe=5F3E8FB9" class="card-img-top" alt="...">
+          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/69810854_10157584018869030_7320761207592321024_o.jpg?_nc_cat=104&_nc_sid=da31f3&_nc_ohc=8BcyMaEVegcAX-CVq0v&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=8db722ced3f89b4133d8d6d3a785460f&oe=5F3F4792" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Barcelona, Spain 2019</h5>
+            <p class="card-text">This is from towards the end of a working trip to Spain last year in October. That's Barceloneta Beach in the background.</p>
           </div>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card">
-          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/73417787_10157567784444030_793605000184987648_o.jpg?_nc_cat=108&_nc_sid=da31f3&_nc_ohc=mVc8MK1tr8sAX8jfmUY&_nc_oc=AQn-RRQbGqZU-PkXo7ONsCxr8o_vke-F23yS61JexSgQFP7LYghtnVfuSvp8ruXPs0kPOrx3nc2x-k7wCFZQW8Wa&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=3a84132f271c1df5b46f3dacc6db3350&oe=5F3DF4BC" class="card-img-top" alt="...">
+          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/c69.0.414.414a/p552x414/61915819_10157177208799030_9214069764756865024_n.jpg?_nc_cat=103&_nc_sid=da31f3&_nc_ohc=B7K2W1QeAKYAX9021ws&_nc_ht=scontent-sjc3-1.xx&oh=0706c459c1374929b99b4cf85676b058&oe=5F4303D6" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col mb-4">
-        <div class="card">
-          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/c69.0.414.414a/p552x414/61915819_10157177208799030_9214069764756865024_n.jpg?_nc_cat=103&_nc_sid=da31f3&_nc_ohc=B7K2W1QeAKYAX9021ws&_nc_ht=scontent-sjc3-1.xx&oh=cc8d3c784df8c54bcefe9955dbbf0857&oe=5F3F0F56" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">Niagara Falls, Canada 2019</h5>
+            <p class="card-text">Went to see Niagara Falls last year while visiting cousins I hadn't seen since I was 14 years old.</p>
           </div>
         </div>
       </div>
@@ -82,8 +73,17 @@
         <div class="card">
           <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/58852800_10157095919209030_7654882158250557440_o.jpg?_nc_cat=100&_nc_sid=da31f3&_nc_ohc=bTtNySPpEB0AX87isxU&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=ea638dd6d3b9ff6722ecc93d91d3b1b6&oe=5F4005D8" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Cancún, Mexico 2019</h5>
+            <p class="card-text">Hello from Cancún! This was my first time in Mexico, where I was lucky enough to stay at Breathless, an all-inclusive resort.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card">
+          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/74234755_10157527426794030_4717823409159929856_o.jpg?_nc_cat=109&_nc_sid=da31f3&_nc_ohc=zIb5y_0ePp0AX-ABbyi&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=738362f3892bf206ad770a9a3334837d&oe=5F410491" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Newport Beach, CA 2019</h5>
+            <p class="card-text">Visiting with my mom, sister, and her husband (he's taking the photo). This was after a nice dinner and some wine at Zinqué Cafe.</p>
           </div>
         </div>
       </div>
