added sticky footer containing social media links

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,5 +99,22 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
   </div>
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted">
+        <nav class="d-flex row justify-content-center">
+          <nav class="nav-item col-4">
+            <a href="https://www.linkedin.com/in/stephanie-sevadjian-a3293aa4" target="_blank" >LinkedIn</a>
+          </nav>
+          <nav class="nav-item col-4">
+            <a href="https://twitter.com/SSevadjian" target="_blank">Twitter</a>
+          </nav>
+          <nav class="nav-item col-4">
+            <a href="https://www.facebook.com/stephanie.sevadjian" target="_blank">Facebook</a>
+          </nav>
+        </nav>
+      </span>
+    </div>
+  </footer>
   </body>
 </html>
