--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     
+    <!--Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css"/>
 
