--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,8 @@
 
     <!--Start of CONTAINER-->
     <div class="container contentbackground row rounded no-gutters">
-        <!-- Begin Image Cards -->
-    <div class="row row-cols-1 row-cols-md-2">
+      <!-- Begin Image Cards -->
+      <section class="row row-cols-1 row-cols-md-2">
       <div class="col mb-4">
         <div class="card">
           <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/69810854_10157584018869030_7320761207592321024_o.jpg?_nc_cat=104&_nc_sid=da31f3&_nc_ohc=8BcyMaEVegcAX-CVq0v&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=8db722ced3f89b4133d8d6d3a785460f&oe=5F3F4792" class="card-img-top" alt="...">
@@ -87,8 +87,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <!-- End Image Cards-->
+      </section>
+      <!-- End Image Cards-->
     </div>
     <!--End of CONTAINER-->
 
