--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <div class="container"> 
     <!--Start of NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light mycolor">
-        <a class="mynavbrand col-8 col-6-md" href="#"><h1>Stephanie Sevadjian</h1></a>
+        <a class="mynavbrand col-8 col-6-md"><div class="nameFont">Stephanie Sevadjian</div></a>
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
           <li class="nav-item">
             <a class="mynavlink" href="./index.html">About Me</a>
@@ -40,7 +40,7 @@
       <table class="table">
         <thead class="table">
           <tr>
-            <th scope="col"><h2>Contact</h2></th>
+            <th scope="col">contact</th>
           </tr>
         </thead>
       </table>
@@ -82,17 +82,17 @@
   <footer class="footer mt-auto py-3">
     <div class="container">
       <span class="text-muted">
-        <nav class="d-flex row justify-content-center">
-          <nav class="nav-item col-4">
+        <div class="d-flex row justify-content-center">
+          <div class="nav-item col-4">
             <a href="https://www.linkedin.com/in/stephanie-sevadjian-a3293aa4" target="_blank" >LinkedIn</a>
-          </nav>
-          <nav class="nav-item col-4">
+          </div>
+          <div class="nav-item col-4">
             <a href="https://twitter.com/SSevadjian" target="_blank">Twitter</a>
-          </nav>
-          <nav class="nav-item col-4">
+          </div>
+          <div class="nav-item col-4">
             <a href="https://www.facebook.com/stephanie.sevadjian" target="_blank">Facebook</a>
-          </nav>
-        </nav>
+          </div>
+        </div>
       </span>
     </div>
   </footer>
