--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
     <!--Start of NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light mycolor">
-        <nav class="mynavbrand col-8 col-6-md"><h1>Stephanie Sevadjian</h1></nav>
+        <nav class="mynavbrand col-8 col-6-md"><div class="nameFont">Stephanie Sevadjian</div></nav>
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
           <li class="nav-item">
             <a class="mynavlink" href="./index.html">About Me</a>
@@ -41,7 +41,7 @@
       <table class="table">
         <thead class="table">
           <tr>
-            <th scope="col"><h2>Portfolio</h2></th>
+            <th scope="col">Portfolio</th>
           </tr>
         </thead>
       </table>
@@ -102,17 +102,17 @@
   <footer class="footer mt-auto py-3">
     <div class="container">
       <span class="text-muted">
-        <nav class="d-flex row justify-content-center">
-          <nav class="nav-item col-4">
+        <div class="d-flex row justify-content-center">
+          <div class="nav-item col-4">
             <a href="https://www.linkedin.com/in/stephanie-sevadjian-a3293aa4" target="_blank" >LinkedIn</a>
-          </nav>
-          <nav class="nav-item col-4">
+          </div>
+          <div class="nav-item col-4">
             <a href="https://twitter.com/SSevadjian" target="_blank">Twitter</a>
-          </nav>
-          <nav class="nav-item col-4">
+          </div>
+          <div class="nav-item col-4">
             <a href="https://www.facebook.com/stephanie.sevadjian" target="_blank">Facebook</a>
-          </nav>
-        </nav>
+          </div>
+        </div>
       </span>
     </div>
   </footer>
