--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
   </div>
   <footer class="footer mt-auto py-3">
     <div class="container">
-      <span class="text-muted">
+      <div class="text-muted">
         <div class="d-flex row justify-content-center">
           <div class="nav-item col-4">
             <a href="https://www.linkedin.com/in/stephanie-sevadjian-a3293aa4" target="_blank" >LinkedIn</a>
@@ -93,7 +93,7 @@
             <a href="https://www.facebook.com/stephanie.sevadjian" target="_blank">Facebook</a>
           </div>
         </div>
-      </span>
+      </div>
     </div>
   </footer>
   </body>
