--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
       <table class="table">
         <thead class="table">
           <tr>
-            <th scope="col">contact</th>
+            <th scope="col">Contact</th>
           </tr>
         </thead>
       </table>
