--- a/contact.html
+++ b/contact.html
@@ -52,15 +52,15 @@
         <form class="col-sm-10">
             <div class="form-group">
               <label for="exampleFormControlInput1">First Name</label>
-              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="First Name">
+              <input type="text" class="form-control" placeholder="First Name">
             </div>
             <div class="form-group">
               <label for="exampleFormControlInput1">Last Name</label>
-              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Last Name">
+              <input type="text" class="form-control" placeholder="Last Name">
             </div>
           <div class="form-group">
             <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" placeholder="name@example.com">
           </div>
         
           <div class="form-group">
