--- a/portfolio.html
+++ b/portfolio.html
@@ -1,102 +1,124 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    
-    <!-- Style Sheet -->
-    <link rel="stylesheet" href="style.css"/>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Portfolio</title>
-  </head>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
-  <body class="bg-light">
-  <div class="container">  
+  <!-- Style Sheet -->
+  <link rel="stylesheet" href="style.css" />
+
+  <title>Portfolio</title>
+</head>
+
+<body class="bg-light">
+  <div class="container">
 
     <!--Start of NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light mycolor">
-        <nav class="mynavbrand col-8 col-6-md"><div class="nameFont">Stephanie Sevadjian</div></nav>
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="mynavlink" href="./index.html">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="mynavlink" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="mynavlink" href="./contact.html">Contact</a>
-          </li>
-        </ul>
+      <nav class="mynavbrand col-8 col-6-md">
+        <div class="nameFont">Stephanie Sevadjian</div>
+      </nav>
+      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="mynavlink" href="./index.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="mynavlink" href="./portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="mynavlink" href="./contact.html">Contact</a>
+        </li>
+      </ul>
     </nav>
     <!--End of NAVBAR-->
 
     <!--Start of TABLE-->
-      <table class="table">
-        <thead class="table">
-          <tr>
-            <th scope="col">Portfolio</th>
-          </tr>
-        </thead>
-      </table>
+    <table class="table">
+      <thead class="table">
+        <tr>
+          <th scope="col">Portfolio</th>
+        </tr>
+      </thead>
+    </table>
     <!--End of TABLE-->
 
     <!--Start of CONTAINER-->
     <div class="container contentbackground row rounded no-gutters">
       <!-- Begin Image Cards -->
-      <section class="row row-cols-1 row-cols-md-2">
-      <div class="col mb-4">
-        <div class="card">
-          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/69810854_10157584018869030_7320761207592321024_o.jpg?_nc_cat=104&_nc_sid=da31f3&_nc_ohc=8BcyMaEVegcAX-CVq0v&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=8db722ced3f89b4133d8d6d3a785460f&oe=5F3F4792" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Barcelona, Spain 2019</h5>
-            <p class="card-text">This is from towards the end of a working trip to Spain last year in October. That's Barceloneta Beach in the background.</p>
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+          <div class="card">
+            <img
+              src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/69810854_10157584018869030_7320761207592321024_o.jpg?_nc_cat=104&_nc_sid=da31f3&_nc_ohc=8BcyMaEVegcAX-CVq0v&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=8db722ced3f89b4133d8d6d3a785460f&oe=5F3F4792"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Barcelona, Spain 2019</h5>
+              <p class="card-text">This is from towards the end of a working trip to Spain last year in October. That's
+                Barceloneta Beach in the background.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img
+              src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/c69.0.414.414a/p552x414/61915819_10157177208799030_9214069764756865024_n.jpg?_nc_cat=103&_nc_sid=da31f3&_nc_ohc=B7K2W1QeAKYAX9021ws&_nc_ht=scontent-sjc3-1.xx&oh=0706c459c1374929b99b4cf85676b058&oe=5F4303D6"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Niagara Falls, Canada 2019</h5>
+              <p class="card-text">Went to see Niagara Falls last year while visiting cousins I hadn't seen since I was
+                14 years old.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img
+              src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/58852800_10157095919209030_7654882158250557440_o.jpg?_nc_cat=100&_nc_sid=da31f3&_nc_ohc=bTtNySPpEB0AX87isxU&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=ea638dd6d3b9ff6722ecc93d91d3b1b6&oe=5F4005D8"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cancún, Mexico 2019</h5>
+              <p class="card-text">Hello from Cancún! This was my first time in Mexico, where I was lucky enough to stay
+                at Breathless, an all-inclusive resort.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img
+              src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/74234755_10157527426794030_4717823409159929856_o.jpg?_nc_cat=109&_nc_sid=da31f3&_nc_ohc=zIb5y_0ePp0AX-ABbyi&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=738362f3892bf206ad770a9a3334837d&oe=5F410491"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Newport Beach, CA 2019</h5>
+              <p class="card-text">Visiting with my mom, sister, and her husband (he's taking the photo). This was after
+                a nice dinner and some wine at Zinqué Cafe.</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col mb-4">
-        <div class="card">
-          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/c69.0.414.414a/p552x414/61915819_10157177208799030_9214069764756865024_n.jpg?_nc_cat=103&_nc_sid=da31f3&_nc_ohc=B7K2W1QeAKYAX9021ws&_nc_ht=scontent-sjc3-1.xx&oh=0706c459c1374929b99b4cf85676b058&oe=5F4303D6" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Niagara Falls, Canada 2019</h5>
-            <p class="card-text">Went to see Niagara Falls last year while visiting cousins I hadn't seen since I was 14 years old.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col mb-4">
-        <div class="card">
-          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/58852800_10157095919209030_7654882158250557440_o.jpg?_nc_cat=100&_nc_sid=da31f3&_nc_ohc=bTtNySPpEB0AX87isxU&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=ea638dd6d3b9ff6722ecc93d91d3b1b6&oe=5F4005D8" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Cancún, Mexico 2019</h5>
-            <p class="card-text">Hello from Cancún! This was my first time in Mexico, where I was lucky enough to stay at Breathless, an all-inclusive resort.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col mb-4">
-        <div class="card">
-          <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/74234755_10157527426794030_4717823409159929856_o.jpg?_nc_cat=109&_nc_sid=da31f3&_nc_ohc=zIb5y_0ePp0AX-ABbyi&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=738362f3892bf206ad770a9a3334837d&oe=5F410491" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Newport Beach, CA 2019</h5>
-            <p class="card-text">Visiting with my mom, sister, and her husband (he's taking the photo). This was after a nice dinner and some wine at Zinqué Cafe.</p>
-          </div>
-        </div>
-      </div>
-      </section>
       <!-- End Image Cards-->
     </div>
     <!--End of CONTAINER-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"></script>
 
   </div>
   <footer class="footer mt-auto py-3">
@@ -104,7 +126,7 @@
       <div class="text-muted">
         <div class="d-flex row justify-content-center">
           <div class="nav-item col-4">
-            <a href="https://www.linkedin.com/in/stephanie-sevadjian-a3293aa4" target="_blank" >LinkedIn</a>
+            <a href="https://www.linkedin.com/in/stephanie-sevadjian-a3293aa4" target="_blank">LinkedIn</a>
           </div>
           <div class="nav-item col-4">
             <a href="https://twitter.com/SSevadjian" target="_blank">Twitter</a>
@@ -116,5 +138,6 @@
       </div>
     </div>
   </footer>
-  </body>
+</body>
+
 </html>
