--- a/contact.html
+++ b/contact.html
@@ -51,15 +51,15 @@
         <!--Start of Form-->
         <form class="col-sm-10">
             <div class="form-group">
-              <label for="exampleFormControlInput1">First Name</label>
+              <label>First Name</label>
               <input type="text" class="form-control" placeholder="First Name">
             </div>
             <div class="form-group">
-              <label for="exampleFormControlInput1">Last Name</label>
+              <label>Last Name</label>
               <input type="text" class="form-control" placeholder="Last Name">
             </div>
           <div class="form-group">
-            <label for="exampleFormControlInput1">Email address</label>
+            <label>Email address</label>
             <input type="email" class="form-control" placeholder="name@example.com">
           </div>
         
