--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <!--End of NAVBAR-->
 
-    
+
     <!--Start of TABLE-->
       <table class="table col-12">
         <thead class="table">
@@ -53,15 +53,14 @@
 
     <!--Start of CONTAINER-->
     <div class="container contentbackground row rounded no-gutters">
-          <div class="mypicture col-5 mx-auto">
-            <img class="img-thumbnail rounded-circle justify-content-start" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/90261217_10158014546514030_4166488760998952960_o.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=PEDc1_fMRRsAX_MBnXn&_nc_ht=scontent-sjc3-1.xx&oh=f7fe33ef3a750e745cd41217abb5be41&oe=5F362233" alt="my picture"/>
+          <div class="col-5 mx-auto">
+            <img class="img-thumbnail rounded-circle align-items-center" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/90261217_10158014546514030_4166488760998952960_o.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=PEDc1_fMRRsAX_MBnXn&_nc_ht=scontent-sjc3-1.xx&oh=f7fe33ef3a750e745cd41217abb5be41&oe=5F362233" alt="my picture"/>
           </div>
           <section class="col-6 justify-content-center mx-auto">
             <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta dolore consectetur, beatae placeat ea laboriosam ratione esse tempora soluta dolor quasi reiciendis nisi id ipsa. Et, repellat, possimus voluptas sed eaque optio veniam, ex velit placeat tempora ipsam impedit? Labore aut dolorem quis, dolores excepturi repellat numquam fuga?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero delectus, quasi dolorum laudantium aliquam debitis quidem eaque similique culpa magni ab magnam ipsam maiores, voluptatum esse sed quis alias modi! Atque veritatis laudantium sit hic autem quis, veniam sapiente temporibus incidunt, unde aliquam aperiam. Ducimus odit repellat tempore est voluptate?.
+            <p>My name is Stephanie, I'm 33 years old, and I'm an up and coming full stack web developer currently living in San Francisco.</p>
+            <p>My interest in development came after moving to San Francisco. Priort to that I was studying accounting and had planned to finish my degree at Long Beach University. Plans changed, though, when I took a job here in the city supporting an accounting application. I wound up quitting school and began to develop a taste for a more technical career path. I work at FinancialForce, a partner of Salesforce,and so the accounting application I support is written in apex. I've been doing this now for about 6 years, and in that time I've had to opportunity to fly to Leeds and Harrogate as part of a steering committee to dedo our entire Support process. Since then, I've also flown to our office in Granada, Spain to learn from one of our Engineers on how to better work and understand performance issues that arise in our application. These experiences, and from understanding what customers desire most in an application, have led me to want to expand my skillset so I can help directly with those types of problems, or to build something of my own. And so that is why I decided to take this bootcamp course, so I can fast-track the learning process.
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse similique minus illum perferendis. Eaque reiciendis harum rerum nostrum ad inventore officia tenetur quasi. Provident dolorem quos veritatis rem ex quam quasi blanditiis possimus! Quisquam accusantium, ipsam assumenda aliquid autem odio culpa tempore consequuntur est ipsa, recusandae tenetur vel sed numquam? Similique perferendis totam explicabo odit rem reiciendis, modi architecto consectetur reprehenderit debitis iusto veniam ratione et aperiam eligendi delectus dolore distinctio natus repudiandae ducimus praesentium. Ipsam, animi consectetur.</p>
           </section>
     </div>
     <!--End of CONTAINER-->
