updated portfolio with group project work and homeworks

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,48 +58,44 @@
         <div class="col mb-4">
           <div class="card">
             <img
-              src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/69810854_10157584018869030_7320761207592321024_o.jpg?_nc_cat=104&_nc_sid=da31f3&_nc_ohc=8BcyMaEVegcAX-CVq0v&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=8db722ced3f89b4133d8d6d3a785460f&oe=5F3F4792"
+              src="./project1/projectAssets/groupProject1image.png"
               class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Barcelona, Spain 2019</h5>
-              <p class="card-text">This is from towards the end of a working trip to Spain last year in October. That's
-                Barceloneta Beach in the background.</p>
+              <h5 class="card-title">Night In</h5>
+              <p class="card-text">This app takes the decision-making out of the night, so you can focus more on just enjoying it. Check us out here: <a href="https://tuanasaurus.github.io/groupProject1DinnerMovie/" target="_blank">Night In</a></p>
             </div>
           </div>
         </div>
         <div class="col mb-4">
           <div class="card">
             <img
-              src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/c69.0.414.414a/p552x414/61915819_10157177208799030_9214069764756865024_n.jpg?_nc_cat=103&_nc_sid=da31f3&_nc_ohc=B7K2W1QeAKYAX9021ws&_nc_ht=scontent-sjc3-1.xx&oh=0706c459c1374929b99b4cf85676b058&oe=5F4303D6"
+              src="./workDayPlanner/workDayImage.png"
               class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Niagara Falls, Canada 2019</h5>
-              <p class="card-text">Went to see Niagara Falls last year while visiting cousins I hadn't seen since I was
-                14 years old.</p>
+              <h5 class="card-title">Work Day Planner</h5>
+              <p class="card-text">Need a nice, readable page to record your daily work day schedule? Why not try out my day planner here?: <a href="https://ssevadjian.github.io/Day-Planner/" target="_blank">Work Day Planner</a></p>
             </div>
           </div>
         </div>
         <div class="col mb-4">
           <div class="card">
             <img
-              src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/58852800_10157095919209030_7654882158250557440_o.jpg?_nc_cat=100&_nc_sid=da31f3&_nc_ohc=bTtNySPpEB0AX87isxU&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=ea638dd6d3b9ff6722ecc93d91d3b1b6&oe=5F4005D8"
+              src="./weatherAPI/weatherDash.png"
               class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Cancún, Mexico 2019</h5>
-              <p class="card-text">Hello from Cancún! This was my first time in Mexico, where I was lucky enough to stay
-                at Breathless, an all-inclusive resort.</p>
+              <h5 class="card-title">Weather App</h5>
+              <p class="card-text">Everyone always needs a quick way of knowing what the weather's going to be on any given day in any given area. Enter in any city to see the 5 day forecast here: <a href="https://ssevadjian.github.io/Weather-App/" target="_blank">Weather App</a></p>
             </div>
           </div>
         </div>
         <div class="col mb-4">
           <div class="card">
             <img
-              src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-0/s552x414/74234755_10157527426794030_4717823409159929856_o.jpg?_nc_cat=109&_nc_sid=da31f3&_nc_ohc=zIb5y_0ePp0AX-ABbyi&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=738362f3892bf206ad770a9a3334837d&oe=5F410491"
+              src="./codeQuiz/codeQuizChallenge.png"
               class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Newport Beach, CA 2019</h5>
-              <p class="card-text">Visiting with my mom, sister, and her husband (he's taking the photo). This was after
-                a nice dinner and some wine at Zinqué Cafe.</p>
+              <h5 class="card-title">Code Quiz Challenge!</h5>
+              <p class="card-text">Take this little quiz I put together to test your knowledge in JavaScript!: <a href="https://ssevadjian.github.io/Code-Quiz/" target="_blank">Code Quiz</a></p>
             </div>
           </div>
         </div>
